<resources>

    <string name="todo">TODO</string>

    <string name="app_name">Shared Preference &amp; Notification</string>
    <string name="welcome_line1">Dự án Demo môn lập trình mạng</string>
    <string name="welcome_line2">Nhóm OnionIT</string>
    <string name="shared_preference_title">Shared Preference</string>
    <string name="notification_title">Notification</string>
    <string name="fab_message">Đây là dự án Demo môn lập trình Android của nhóm OnionIT</string>
    <string name="copyright">Bản quyền thuộc về nhóm OnionIT, copy source nhớ ghi nguồn</string>

    <string name="shared_preference_name_label">Database:</string>
    <string name="shared_preference_key_label">Khoá:</string>
    <string name="shared_preference_value_label">Giá trị:</string>
    <string name="read_label_btn">Đọc</string>
    <string name="write_label_btn">Ghi</string>
    <string name="delete_label_btn">Xoá</string>

    <string name="notification_id_label">Mã thông báo:</string>
    <string name="notification_title_label">Tiêu đề:</string>
    <string name="notification_message_label">Nội dung:</string>
    <string name="random_label_btn">Ngẫu nhiên</string>
    <string name="create_label_btn">Tạo</string>

</resources>